--- a/Documents/report/main.bib
+++ b/Documents/report/main.bib
@@ -492,6 +492,15 @@
 	file = {IEEE Xplore Abstract Record:/Users/t/Zotero/storage/NA6ZHGG6/6795228.html:text/html}
 }
 
+@article{lin_rouge:_nodate,
+	title = {{ROUGE}: {A} {Package} for {Automatic} {Evaluation} of {Summaries}},
+	abstract = {ROUGE stands for Recall-Oriented Understudy for Gisting Evaluation. It includes measures to automatically determine the quality of a summary by comparing it to other (ideal) summaries created by humans. The measures count the number of overlapping units such as n-gram, word sequences, and word pairs between the computer-generated summary to be evaluated and the ideal summaries created by humans. This paper introduces four different ROUGE measures: ROUGE-N, ROUGE-L, ROUGE-W, and ROUGE-S included in the ROUGE summarization evaluation package and their evaluatio ns. Three of them have been used in the Document Understanding Conference (DUC) 2004, a large-scale summarization evaluation sponsored by NIST.},
+	language = {en},
+	author = {Lin, Chin-Yew},
+	pages = {8},
+	file = {Lin - ROUGE A Package for Automatic Evaluation of Summa.pdf:/Users/t/Zotero/storage/DH7FLSM8/Lin - ROUGE A Package for Automatic Evaluation of Summa.pdf:application/pdf}
+}
+
 @inproceedings{papineni_bleu:_2001,
 	address = {Philadelphia, Pennsylvania},
 	title = {{BLEU}: a method for automatic evaluation of machine translation},
@@ -506,16 +515,4 @@
 	year = {2001},
 	pages = {311},
 	file = {Papineni et al. - 2001 - BLEU a method for automatic evaluation of machine.pdf:/Users/t/Zotero/storage/T6JI7WRI/Papineni et al. - 2001 - BLEU a method for automatic evaluation of machine.pdf:application/pdf}
-}
-
-@inproceedings{lin_rouge:_2004,
-	title = {{ROUGE}: {A} {Package} for {Automatic} {Evaluation} of {Summaries}},
-	shorttitle = {{ROUGE}},
-	url = {https://aclweb.org/anthology/papers/W/W04/W04-1013/},
-	language = {en-us},
-	urldate = {2019-04-13},
-	author = {Lin, Chin-Yew},
-	year = {2004},
-	pages = {74--81},
-	file = {Full Text PDF:/Users/t/Zotero/storage/KLU7HHJC/Lin - 2004 - ROUGE A Package for Automatic Evaluation of Summa.pdf:application/pdf;Snapshot:/Users/t/Zotero/storage/BTZ799GI/W04-1013.html:text/html}
 }
