--- a/Documents/report/ref.bib
+++ b/Documents/report/ref.bib
@@ -519,3 +519,14 @@
 	pages = {74--81},
 	file = {Full Text PDF:/Users/t/Zotero/storage/KLU7HHJC/Lin - 2004 - ROUGE A Package for Automatic Evaluation of Summa.pdf:application/pdf;Snapshot:/Users/t/Zotero/storage/BTZ799GI/W04-1013.html:text/html}
 }
+
+@book{loper_natural_nodate,
+	title = {Natural {Language} {Processing} with {Python}},
+	isbn = {978-0-596-51649-9},
+	url = {http://shop.oreilly.com/product/9780596516499.do},
+	abstract = {This book offers a highly accessible introduction to Natural Language Processing, the field that underpins a variety of language technologies ranging from predictive text and email filtering to automatic summarization and translation. You'll learn...},
+	language = {en},
+	urldate = {2019-04-15},
+	author = {Loper, Ewan Klein, Edward, Steven Bird},
+	file = {Snapshot:/Users/t/Zotero/storage/LWFICYPQ/9780596516499.html:text/html}
+}
