add support for open subtitles dataset and updated vad trainer mechanism

--- a/code/vad_evaluate.ipynb
+++ b/code/vad_evaluate.ipynb
@@ -28,7 +28,7 @@
     "# plotting\n",
     "import matplotlib\n",
     "matplotlib.use('Agg')\n",
-    "from vad import batchData\n",
+    "from vad_utils import batchData\n",
     "from matplotlib import cm\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as mpatches\n",
@@ -45,12 +45,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'hiddenSize': 512, 'latentSize': 400, 'batchSize': 64, 'iterations': 200, 'learningRate': 0.0001, 'gradientClip': 3, 'useBOW': True, 'bidirectionalEncoder': True, 'reduction': 256, 'device': 'cuda', 'useLatent': True}\n"
+      "{'hiddenSize': 350, 'latentSize': 300, 'batchSize': 32, 'iterations': 20, 'learningRate': 0.0001, 'gradientClip': 1, 'useBOW': True, 'bidirectionalEncoder': True, 'reduction': 4, 'device': 'cuda', 'useLatent': True}\n"
      ]
     }
    ],
    "source": [
-    "model_path = \"models/20190411 17-58-12\"\n",
+    "model_path = \"models/20190412 18-08-14\"\n",
     "param_path = os.path.join(model_path,\"model_parameters.json\")\n",
     "with open(param_path) as json_file:  \n",
     "    params = json.load(json_file)\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
    ],
    "source": [
     "print(\"Loading parameters..\", end=\" \")\n",
-    "batchSize  = 10\n",
+    "batchSize  = 32\n",
     "iterations = 1\n",
     "bidirectionalEncoder = params['bidirectionalEncoder']\n",
     "# device = \"cpu\"\n",
@@ -143,12 +143,24 @@
     "vocabularySize = len(id2word)\n",
     "embeddingDim = weightMatrix.shape[1]\n",
     "\n",
-    "embedding_shape = weightMatrix.shape"
+    "embedding_shape = weightMatrix.shape\n",
+    "\n",
+    "# setup additional variables\n",
+    "hiddenSize = params['hiddenSize']\n",
+    "latentSize = params['latentSize']\n",
+    "# setup embeddiing\n",
+    "\n",
+    "embedding = nn.Embedding(\n",
+    "        num_embeddings=vocabularySize,\n",
+    "        embedding_dim=embeddingDim,\n",
+    "        padding_idx=paddingID,\n",
+    "    _weight=weightMatrix\n",
+    "    ).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -161,19 +173,8 @@
     }
    ],
    "source": [
-    "hiddenSize = params['hiddenSize']\n",
-    "latentSize = params['latentSize']\n",
-    "\n",
     "from vad import Encoder, Decoder, loss_function\n",
-    "\n",
     "print(\"Initialising model components..\", end=\" \")\n",
-    "embedding = nn.Embedding(\n",
-    "        num_embeddings=vocabularySize,\n",
-    "        embedding_dim=embeddingDim,\n",
-    "        padding_idx=paddingID,\n",
-    "    _weight=weightMatrix\n",
-    "    )\n",
-    "\n",
     "modelEncoder = Encoder(embedding, vocabularySize,\n",
     "                       paddingID, hiddenSize, bidirectionalEncoder).to(device)\n",
     "\n",
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,67 +327,153 @@
     "     \n",
     "    words = []\n",
     "    for i in range(len(outputs[0])):\n",
-    "        tokens = [entries[j][i] for j in range(len(entries))][1:]\n",
-    "#         print(tokens)\n",
-    "        words.append(\" \".join(tokens))\n",
+    "        tokens = [entries[j][i] for j in range(len(entries))]\n",
+    "        # find the eos token\n",
+    "        try:\n",
+    "            tokenpos = tokens.index(\"<eos>\")\n",
+    "        except:\n",
+    "            tokenpos = len(tokens)\n",
+    "        # remove extra eos tokens and padding values if they exist.\n",
+    "        words.append(\" \".join(tokens[:tokenpos+1]))\n",
     "    return words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<unk> <unk> <unk> the the , , , the . . <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos>\n",
-      "<unk> <unk> <unk> , , . . <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos>\n",
-      "<unk> <unk> <unk> , , , . . <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos>\n",
-      "<unk> <unk> <unk> , , . . . <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos>\n",
-      "<unk> <unk> <unk> , , . . <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos>\n",
-      "<unk> <unk> <unk> , the . . <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos>\n",
-      "<unk> <unk> <unk> , , . . <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos>\n",
-      "<unk> <unk> <unk> , . . <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos>\n",
-      "<unk> <unk> <unk> , . . <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos>\n",
-      "<unk> <unk> <unk> , . . <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos>\n"
-     ]
-    }
-   ],
-   "source": [
-    "entries = [torch.argmax(entry, dim=1) for entry in outputs]\n",
-    "textes  = np.array([[id2word[x.item()] for x in y] for y in entries]).transpose()\n",
-    "for row in textes:\n",
-    "    print(\" \".join(row.tolist()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "INPUT: b 0 0 0 0 0 j 1 u b rating_5.0 polarity_0.0 <unk> he wanted to use one of them with his new pc that has usb inputs only ( i had previously bought him a ps/2 keyboard to usb adapter so he could use his * other * beloved , only slightly newer , keyboard . ) <eos> <pad>\n",
+      "REFERENCE: <unk> he wanted to use one of them with his new pc that has usb inputs only ( i had previously bought him a ps/2 keyboard to usb adapter so he could use his * other * beloved , only slightly newer , keyboard . ) <eos> <pad>\n",
+      "MODEL:     <unk> 'm a happy with this product . <eos>\n",
+      "\n",
+      "INPUT: b 0 0 0 0 0 j 1 u b rating_5.0 polarity_0.0 <unk> he called me asking if i could find a way to get his old \" big round plug \" keyboard with the new <unk> belkin <unk> adapter was just what he needed ( combined with the aforementioned <unk> adapter ) . <eos> <pad>\n",
+      "REFERENCE: <unk> i had it sent to him and he called me a few days later , with delight , saying that the adapter worked perfectly , adding that he was astonished anyone still made components for devices as old as he was using . <eos> <pad>\n",
+      "MODEL:     <unk> have been a happy with the <unk> . <eos>\n",
+      "\n",
+      "INPUT: b 0 0 0 0 0 j 1 u b rating_5.0 polarity_0.0 <unk> but he has also hung on to old keyboards he loves , including a pair of keyboards so old that they have the old pc / at style keyboard connector . <eos> <pad>\n",
+      "REFERENCE: <unk> he called me asking if i could find a way to get his old \" big round plug \" keyboard with the new <unk> belkin <unk> adapter was just what he needed ( combined with the aforementioned <unk> adapter ) . <eos> <pad>\n",
+      "MODEL:     <unk> 've a happy with the price . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 <unk> make sure to note the orientation of the hd as it will only work one way ... easy to put the replacement hd in \" backwards \" . <eos> <pad>\n",
+      "REFERENCE: <unk> but he has also hung on to old keyboards he loves , including a pair of keyboards so old that they have the old pc / at style keyboard connector . <eos> <pad>\n",
+      "MODEL:     compiling the same is . . <eos>\n",
+      "\n",
+      "INPUT: b 0 0 0 0 0 j 1 u b rating_5.0 polarity_0.0 my favorite uncle , now in his 90s , hangs on to an old 386 pc running dos even after i bought him a new pc . <eos> <pad>\n",
+      "REFERENCE: <unk> next , using a small pair of needle - nose pliers , grip the small ribbon cable gently , and push it back into it 's slot . <eos> <pad>\n",
+      "MODEL:     <unk> 've a happy with the <unk> . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 <unk> i had to use a piece of tape to secure the cable to the hd so it would n't come out . <eos> <pad>\n",
+      "REFERENCE: <unk> make sure to note the orientation of the hd as it will only work one way ... easy to put the replacement hd in \" backwards \" . <eos> <pad>\n",
+      "MODEL:     <unk> i have n't be a bit of the <unk> . <eos>\n",
+      "\n",
+      "INPUT: b 0 0 0 0 0 j 1 u b rating_4.0 polarity_0.0 if you want to use your newly purchased 1984 ibm model m keyboard with a modern computer using a ps/2 interface . <eos> <pad>\n",
+      "REFERENCE: my favorite uncle , now in his 90s , hangs on to an old 386 pc running dos even after i bought him a new pc . <eos> <pad>\n",
+      "MODEL:     <unk> 'm a happy with this product . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 <unk> the only trouble i had was the cable would not stay in the hd for some reason . <eos> <pad>\n",
+      "REFERENCE: awesome replacement for an ipod video 5th gen 30 gb hard drive , saved me the cost of buying a brand new ipod . <eos> <pad>\n",
+      "MODEL:     <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 <unk> next , remove the bad hd by unplugging the ribbon cable on the hd side . <eos> <pad>\n",
+      "REFERENCE: <unk> i had to use a piece of tape to secure the cable to the hd so it would n't come out . <eos> <pad>\n",
+      "MODEL:     <unk> <unk> <unk> <unk> <unk> <unk> <unk> . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 <unk> carefully pry apart the ipod with a small flat screwdriver and remove the smaller connector . <eos> <pad>\n",
+      "REFERENCE: this article with all my expectations fulfilled recommend it because the packaging and jurisdiction <unk> correct , in addition to run <unk> <eos> <pad>\n",
+      "MODEL:     <unk> <unk> <unk> <unk> <unk> <unk> <unk> . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 <unk> if you have that indication , all you need is this <unk> repair was easy . <eos> <pad>\n",
+      "REFERENCE: if you want to use your newly purchased 1984 ibm model m keyboard with a modern computer using a ps/2 interface . <eos> <pad>\n",
+      "MODEL:     <unk> 's <unk> <unk> recommend the <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 <unk> i could hear the hd trying to spin up , but not reading properly . <eos> <pad>\n",
+      "REFERENCE: <unk> the only trouble i had was the cable would not stay in the hd for some reason . <eos> <pad>\n",
+      "MODEL:     <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 <unk> the ipod can now be placed on a table with both pieces open . <eos> <pad>\n",
+      "REFERENCE: i even use this attached to about 2 more adapters and i have no keystroke loss or anything . <eos> <pad>\n",
+      "MODEL:     <unk> 's <unk> is a happy . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 brought back my ipod video 30 g back life , easy to replace . <eos> <pad>\n",
+      "REFERENCE: <unk> next , remove the bad hd by unplugging the ribbon cable on the hd side . <eos> <pad>\n",
+      "MODEL:     <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> . <eos>\n",
+      "\n",
+      "INPUT: b 0 0 0 0 0 j 1 u b rating_5.0 polarity_0.0 affordable and works for us keyboard nerds who love the old style keyboards . <eos> <pad>\n",
+      "REFERENCE: <unk> carefully pry apart the ipod with a small flat screwdriver and remove the smaller connector . <eos> <pad>\n",
+      "MODEL:     <unk> have been a happy with the <unk> . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 <unk> it had the \" sad ipod face \" screen of death . <eos> <pad>\n",
+      "REFERENCE: <unk> if you have that indication , all you need is this <unk> repair was easy . <eos> <pad>\n",
+      "MODEL:     <unk> 's <unk> <unk> recommend the <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 a very easy replacement for a 5th gen ipod 30 g hd . <eos> <pad>\n",
+      "REFERENCE: <unk> i could hear the hd trying to spin up , but not reading properly . <eos> <pad>\n",
+      "MODEL:     <unk> <unk> <unk> <unk> <unk> <unk> <unk> . <eos>\n",
+      "\n",
+      "INPUT: b 0 0 0 0 0 j 1 u b rating_5.0 polarity_0.0 needed this to attach my model m keyboard to a kvm switch . <eos> <pad>\n",
+      "REFERENCE: <unk> the ipod can now be placed on a table with both pieces open . <eos> <pad>\n",
+      "MODEL:     <unk> have been a happy with the <unk> . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 <unk> i purchased the ipod on ebay knowing it was damaged . <eos> <pad>\n",
+      "REFERENCE: brought back my ipod video 30 g back life , easy to replace . <eos> <pad>\n",
+      "MODEL:     <unk> <unk> <unk> <unk> <unk> <unk> <unk> <unk> . <eos>\n",
+      "\n",
+      "INPUT: b 0 0 0 0 0 j 1 u b rating_5.0 polarity_0.0 the package arrived in a timely fashion and in good shape . <eos> <pad>\n",
+      "REFERENCE: affordable and works for us keyboard nerds who love the old style keyboards . <eos> <pad>\n",
+      "MODEL:     <unk> 'm a happy with the price . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 <unk> replace with the new hd . <eos> <pad>\n",
+      "REFERENCE: the adapter is exactly what i wanted and makes the connection i needed . <eos> <pad>\n",
+      "MODEL:     <unk> <unk> <unk> <unk> <unk> <unk> <unk> . <eos>\n",
+      "\n",
+      "INPUT: b 0 0 0 0 0 j 1 u b rating_5.0 polarity_0.0 perfect , worked exactly as expected . <eos> <pad>\n",
+      "REFERENCE: <unk> it had the \" sad ipod face \" screen of death . <eos> <pad>\n",
+      "MODEL:     <unk> 've been happy with this product . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 replaced 30 g ipod hd <eos> <pad>\n",
+      "REFERENCE: a very easy replacement for a 5th gen ipod 30 g hd . <eos> <pad>\n",
+      "MODEL:     <unk> i 've n't n't to . . <eos>\n",
+      "\n",
+      "INPUT: b 0 0 0 0 0 j 1 u b rating_5.0 polarity_0.0 <unk> he uses both . <eos> <pad>\n",
+      "REFERENCE: needed this to attach my model m keyboard to a kvm switch . <eos> <pad>\n",
+      "MODEL:     <unk> 'm a happy with this product . <eos>\n",
+      "\n",
+      "INPUT: b 0 0 0 0 0 j 1 u b rating_5.0 polarity_0.0 simple but does the job <eos> <pad>\n",
+      "REFERENCE: <unk> i purchased the ipod on ebay knowing it was damaged . <eos> <pad>\n",
+      "MODEL:     <unk> 've been happy with this product . <eos>\n",
+      "\n",
       "INPUT: b 0 0 0 0 0 j 1 u b rating_5.0 polarity_0.0 kb at to ps/2 adapter <eos> <pad>\n",
       "REFERENCE: the package arrived in a timely fashion and in good shape . <eos> <pad>\n",
-      "MODEL:     <unk> <unk> the . . . <eos> <eos> <eos> <eos> <eos> <eos>\n",
+      "MODEL:     <unk> 've a happy with the <unk> . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 good , cheap replacement <eos> <pad>\n",
+      "REFERENCE: <unk> only hard part is to get the case opened . <eos> <pad>\n",
+      "MODEL:     <unk> 's <unk> is a happy . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 very nice item <eos> <pad>\n",
+      "REFERENCE: so happy , typing on it now ! <eos> <pad>\n",
+      "MODEL:     <unk> <unk> <unk> <unk> <unk> <unk> <unk> . <eos>\n",
+      "\n",
+      "INPUT: b 0 0 0 0 0 j 1 u b rating_5.0 polarity_0.0 works ! <eos> <pad>\n",
+      "REFERENCE: <unk> replace with the new hd . <eos> <pad>\n",
+      "MODEL:     <unk> have been happy with the <unk> . <eos>\n",
+      "\n",
+      "INPUT: b 0 0 0 0 0 j 1 u b rating_5.0 polarity_0.0 as expected <eos> <pad>\n",
+      "REFERENCE: perfect , worked exactly as expected . <eos> <pad>\n",
+      "MODEL:     <unk> have been a happy with the <unk> . <eos>\n",
+      "\n",
+      "INPUT: b 0 0 0 0 0 j 1 u b rating_4.0 polarity_0.0 very necessary <eos> <pad>\n",
+      "REFERENCE: <unk> he uses both . <eos> <pad>\n",
+      "MODEL:     <unk> 've a happy with the <unk> . <eos>\n",
+      "\n",
+      "INPUT: 3 9 3 0 9 9 2 8 6 8 rating_5.0 polarity_0.0 harddrive <eos> <pad>\n",
+      "REFERENCE: :p <eos> <pad>\n",
+      "MODEL:     <unk> <unk> <unk> . <eos>\n",
       "\n"
      ]
     }
@@ -426,18 +513,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bad models/20190412 22-34-59 ['results', 'charts']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# deletes models with no weights saved to them.\n",
     "import shutil\n",
     "import os\n",
     "for x in os.listdir('models'):\n",
